# random_bet

./: .gitignore  in.txt  out.txt  out.txt~  pig.py  popan_out.txt  popanchik.py  pyproject.toml  randomchamps.txt  randomchik.py  randomus.py  read_from_livescore.py  run.py  temp.py
moduls/: StartHour.py  ends.py  read_from_flashscore.py  read_from_livescore.py  read_from_livescore_old.py  start_hour.py
